# docker-cheat-sheet

./: .gitignore  README.md
cheatsheets/: docker_cli.md  docker_compose.md  dockerfile_best_practices.md
examples/: docker_networking_examples.md  docker_volumes_backup.md  dockerfile_multi_stage.md
guides/: ci_cd_examples.md  production_deployment.md  troubleshooting.md
guides/advanced/: advanced_networking.md  docker_swarm.md  dockerignore_examples.md  microservices.md  monitoring.md  registry_setup.md  security.md
scripts/: docker_backup.sh  docker_clean.sh  docker_exec.sh  docker_logs.sh  install.sh  uninstall.sh
templates/django/: .dockerignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  requirements.txt
templates/fastapi/: .dockerignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  requirements.txt
templates/go/: .dockerignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  go.mod
templates/nginx/: Dockerfile  README.md  docker-compose.yml  nginx.conf
templates/node/: .dockerignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  package-lock.json  package.json  server.js
templates/portainer/: README.md  docker-compose.swarm.yml  docker-compose.yml
templates/postgres/: Dockerfile  README.md  (+5 more)
templates/rust/: Cargo.toml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh
templates/rust/src/: main.rs
templates/rust/src/database/: mod.rs
templates/rust/src/handlers/: health.rs  home.rs  items.rs  mod.rs
templates/rust/src/models/: mod.rs
templates/rust/src/routes/: mod.rs
(+34 files in other folders)
